Aupdate swagger documentation
